sem_06/ppo/frontend/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postby-frontend
spec:
  selector:
    app: postby-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
