sem_06/ppo/frontend/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: postby-frontend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: postby.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: postby-frontend
                port:
                  number: 80
